[package]
name = "factor"
version = "0.1.0"
authors = ["y011d4 <yoiida333@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "factor"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[example]]
name = "factor_cui"
path = "examples/factor_cui.rs"

[dependencies]
num-bigint = "0.4.0"
once_cell = "1.8.0"
concurrent-queue = "1.2.2"
ctrlc = "3.1.9"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module", "num-bigint"]

[dependencies.rug]
version = "1.12.0"
default-features = false
features = ["integer"]
